force-app/main/default/objects/Deal_Revenue_Attribution__c/Deal_Revenue_Attribution__c.object-meta.xml
<CustomObject>
    <label>Deal Revenue Attribution</label>
    <pluralLabel>Deal Revenue Attributions</pluralLabel>
    <nameField>
        <displayFormat>DRA-{00000000}</displayFormat>
        <label>Deal Revenue Attribution Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>