force-app/main/default/objects/Deal_Revenue_Attribution__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <label>Approved By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Approved Revenue Attributions</relationshipLabel>
    <relationshipName>Approved_Revenue_Attributions</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>