force-app/main/default/objects/Deal_Revenue_Attribution__c/fields/Attributed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Attributed_Amount__c</fullName>
    <label>Attributed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>