force-app/main/default/objects/Deal_Revenue_Attribution__c/fields/Attribution_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Attribution_Percentage__c</fullName>
    <label>Attribution Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>