force-app/main/default/objects/Deal_Revenue_Attribution__c/fields/Attribution_Type__c.field-meta.xml
<CustomField>
    <fullName>Attribution_Type__c</fullName>
    <description
  >Known Adaptation #6 - a new field, separate from Deal_Registration__c.Attribution_Type__c (Sprint 39's different, deal-level concept).</description>
    <label>Attribution Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sourced</fullName>
                <default>true</default>
                <label>Sourced</label>
            </value>
            <value>
                <fullName>Influenced</fullName>
            </value>
            <value>
                <fullName>Co-Sell</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Implementation</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Expansion</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>