force-app/main/default/objects/Deal_Revenue_Attribution__c/fields/Calculation_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Snapshot__c</fullName>
    <description
  >JSON snapshot of the inputs and result at calculation time (doc section 41.22) - kept explainable even if policy metadata later changes.</description>
    <label>Calculation Snapshot</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>