force-app/main/default/objects/Deal_Revenue_Attribution__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <label>Deal</label>
    <type>Lookup</type>
    <referenceTo>Deal_Registration__c</referenceTo>
    <relationshipLabel>Deal Revenue Attributions</relationshipLabel>
    <relationshipName>Deal_Revenue_Attributions</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>