force-app/main/default/objects/Deal_Revenue_Attribution__c/fields/Deal_Participant__c.field-meta.xml
<CustomField>
    <fullName>Deal_Participant__c</fullName>
    <label>Deal Participant</label>
    <type>Lookup</type>
    <referenceTo>Deal_Participant__c</referenceTo>
    <relationshipLabel>Revenue Attributions</relationshipLabel>
    <relationshipName>Revenue_Attributions</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>