force-app/main/default/objects/Deal_Revenue_Attribution__c/fields/Effective_On__c.field-meta.xml
<CustomField>
    <fullName>Effective_On__c</fullName>
    <label>Effective On</label>
    <type>DateTime</type>
</CustomField>