force-app/main/default/objects/Deal_Revenue_Attribution__c/fields/Override__c.field-meta.xml
<CustomField>
    <fullName>Override__c</fullName>
    <label>Override</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>