force-app/main/default/objects/Deal_Revenue_Attribution__c/fields/Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account__c</fullName>
    <label>Partner Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Revenue Attributions</relationshipLabel>
    <relationshipName>Partner_Revenue_Attributions</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>