force-app/main/default/objects/Deal_Revenue_Attribution__c/fields/Protection__c.field-meta.xml
<CustomField>
    <fullName>Protection__c</fullName>
    <label>Protection</label>
    <type>Lookup</type>
    <referenceTo>Deal_Protection_Grant__c</referenceTo>
    <relationshipLabel>Revenue Attributions</relationshipLabel>
    <relationshipName>Revenue_Attributions2</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>