force-app/main/default/objects/Deal_Revenue_Attribution__c/fields/Revenue__c.field-meta.xml
<CustomField>
    <fullName>Revenue__c</fullName>
    <label>Revenue</label>
    <type>Lookup</type>
    <referenceTo>Deal_Revenue__c</referenceTo>
    <relationshipLabel>Attributions</relationshipLabel>
    <relationshipName>Attributions</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <required>true</required>
</CustomField>